# greyhound-predictor

.github/: CODEOWNERS
.github/workflows/: ci.yml
Dogs/greyhound-predictor-starter/: README.md  pyproject.toml
Dogs/greyhound-predictor-starter/.github/: CODEOWNERS
Dogs/greyhound-predictor-starter/.github/workflows/: ci.yml
Dogs/greyhound-predictor-starter/examples/: card.sample.json  cards_multi.json
Dogs/greyhound-predictor-starter/src/greyhound_predictor/: __init__.py  calculator.py  cli.py  io_utils.py
Dogs/greyhound-predictor-starter/src/greyhound_predictor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Dogs/greyhound-predictor-starter/tests/: test_ci_boot.py  test_contract.py  test_smoke.py
