[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greyhound-predictor"
version = "1.3.0"
requires-python = ">=3.11"
description = "OFF-NET v1.3 greyhound race predictor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
